--- a/applications/luci-app-passwall/Makefile
+++ b/applications/luci-app-passwall/Makefile
@@ -17,70 +17,94 @@ include $(INCLUDE_DIR)/package.mk
 define Package/$(PKG_NAME)/config
 menu "Configuration"
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks
-	bool "Include Shadowsocks"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Libev_Client
+	bool "Include Shadowsocks Libev Client"
 	default y
+	select PACKAGE_shadowsocks-libev-ss-redir
+	select PACKAGE_shadowsocks-libev-ss-local
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Rust
-	bool "Include Shadowsocks Rust (AEAD ciphers only)"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Libev_Server
+	bool "Include Shadowsocks Libev Server"
+	default y
+	select PACKAGE_shadowsocks-libev-ss-server
+
+config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Rust_Client
+	bool "Include Shadowsocks Rust Client"
 	depends on aarch64||arm||i386||mips||mipsel||x86_64
-	default y if aarch64||x86_64
+	default n
+	select PACKAGE_shadowsocks-rust-sslocal
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Server
-	bool "Include Shadowsocks Server"
+config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR_Libev_Client
+	bool "Include ShadowsocksR Libev Client"
 	default y
+	select PACKAGE_shadowsocksr-libev-ssr-local
+	select PACKAGE_shadowsocksr-libev-ssr-redir
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR
-	bool "Include ShadowsocksR"
+config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR_Libev_Server
+	bool "Include ShadowsocksR Libev Server"
 	default y
-
-config PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR_Server
-	bool "Include ShadowsocksR Server"
-	default y
+	select PACKAGE_shadowsocksr-libev-ssr-server
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Xray
 	bool "Include Xray"
 	default y if i386||x86_64||arm||aarch64
+	select PACKAGE_xray-core
+	select PACKAGE_xray-geodata
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Trojan_Plus
 	bool "Include Trojan_Plus"
 	default y
+	select PACKAGE_trojan-plus
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Trojan_GO
 	bool "Include Trojan_GO"
 	default n
+	select PACKAGE_trojan-go
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Brook
 	bool "Include Brook"
 	default n
+	select PACKAGE_brook
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_NaiveProxy
 	bool "Include NaiveProxy"
 	default n
+	select PACKAGE_naiveproxy
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_kcptun
-	bool "Include kcptun"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Kcptun
+	bool "Include Kcptun"
 	default n
+	select PACKAGE_kcptun-client
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_haproxy
-	bool "Include haproxy"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Haproxy
+	bool "Include Haproxy"
 	default y
+	select PACKAGE_haproxy
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_ChinaDNS_NG
 	bool "Include ChinaDNS-NG"
 	default n
+	select PACKAGE_chinadns-ng
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_dns2socks
-	bool "Include dns2socks"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Dns2socks
+	bool "Include Dns2socks"
 	default y
+	select PACKAGE_dns2socks
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_v2ray-plugin
-	bool "Include v2ray-plugin (Shadowsocks plugin)"
+config PACKAGE_$(PKG_NAME)_INCLUDE_V2ray-plugin
+	bool "Include V2ray-plugin (Shadowsocks plugin)"
 	default y if i386||x86_64||arm||aarch64
+	select PACKAGE_v2ray-plugin
 
-config PACKAGE_$(PKG_NAME)_INCLUDE_simple-obfs
-	bool "Include simple-obfs (Shadowsocks plugin)"
+config PACKAGE_$(PKG_NAME)_INCLUDE_Simple-obfs
+	bool "Include Simple-obfs (Shadowsocks plugin)"
 	default y if i386||x86_64||arm||aarch64
+	select PACKAGE_simple-obfs
+
+config PACKAGE_$(PKG_NAME)_INCLUDE_PDNSD
+	bool "Include PDNSD"
+	default y
+	select PACKAGE_pdnsd-alt
 
 endmenu
 endef
@@ -92,36 +116,15 @@ define Package/$(PKG_NAME)
   PKGARCH:=all
   DEPENDS:=+libmbedtls +iptables-mod-tproxy +ip +ipset +coreutils +coreutils-base64 +coreutils-nohup +luci-lib-jsonc \
   +curl +ca-certificates +resolveip +unzip +dnsmasq-full +tcping +libuci-lua \
-  +ipt2socks \
-  +microsocks \
-  +pdnsd-alt \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks:shadowsocks-libev-ss-redir \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks:shadowsocks-libev-ss-local \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Rust:shadowsocks-rust-sslocal \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Shadowsocks_Server:shadowsocks-libev-ss-server \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR:shadowsocksr-libev-ssr-redir \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR:shadowsocksr-libev-ssr-local \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_ShadowsocksR_Server:shadowsocksr-libev-ssr-server \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Xray:xray-core \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Xray:xray-geodata \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Trojan_Plus:trojan-plus \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Trojan_GO:trojan-go \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_NaiveProxy:naiveproxy \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_Brook:brook \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_kcptun:kcptun-client \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_haproxy:haproxy \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_ChinaDNS_NG:chinadns-ng \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_dns2socks:dns2socks \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_v2ray-plugin:v2ray-plugin \
-  +PACKAGE_$(PKG_NAME)_INCLUDE_simple-obfs:simple-obfs
+  +ipt2socks +microsocks
 endef
 
 define Build/Prepare
 endef
- 
+
 define Build/Configure
 endef
- 
+
 define Build/Compile
 endef
 
@@ -132,6 +135,8 @@ define Package/$(PKG_NAME)/conffiles
 /usr/share/passwall/rules/direct_ip
 /usr/share/passwall/rules/proxy_host
 /usr/share/passwall/rules/proxy_ip
+/usr/share/passwall/rules/block_host
+/usr/share/passwall/rules/block_ip
 endef
 
 define Package/$(PKG_NAME)/install
