--- a/applications/luci-app-passwall/Makefile
+++ b/applications/luci-app-passwall/Makefile
@@ -150,9 +150,15 @@ define Package/luci-app-passwall/postinst
 #!/bin/sh
 
 if [ -z "$${IPKG_INSTROOT}" ]; then
+	(. /etc/uci-defaults/luci-passwall) && rm -f /etc/uci-defaults/luci-passwall)
 	touch $${IPKG_INSTROOT}/etc/config/passwall_show >/dev/null 2>&1
+        rm -f /tmp/luci-indexcache
+        rm -rf /tmp/luci-modulecache/
+        killall -HUP rpcd 2>/dev/null
 fi
 exit 0
 endef
 
-$(eval $(call BuildPackage,luci-app-passwall))
+include ../../luci.mk
+
+# call BuildPackage - OpenWrt buildroot signature
