--- a/applications/luci-app-vsftpd/Makefile
+++ b/applications/luci-app-vsftpd/Makefile
@@ -6,10 +6,9 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for VSFTPD
-LUCI_DEPENDS:=+vsftpd-alt
+LUCI_DEPENDS:=+vsftpd
 LUCI_PKGARCH:=all
-PKG_VERSION:=1.0
-PKG_RELEASE:=3
+PKG_RELEASE:=$(COMMITCOUNT)
 
 include ../../luci.mk
 
