--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -14,6 +14,6 @@ PKG_RELEASE:=2
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
