luci-app-unblockneteasemusic: bump to 2.11-3
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit 432673e6a6a6ff37e88beea2de3f3f68b2bd8460)

--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -10,10 +10,10 @@ LUCI_PKGARCH:=all
 
 PKG_NAME:=luci-app-unblockneteasemusic
 PKG_VERSION:=2.11
-PKG_RELEASE:=2
+PKG_RELEASE:=3
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
