--- a/applications/luci-app-jd-dailybonus/Makefile
+++ b/applications/luci-app-jd-dailybonus/Makefile
@@ -1,19 +1,16 @@
-#
-# Copyright (C) 2006-2017 OpenWrt.org
-#
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
-#
-
 include $(TOPDIR)/rules.mk
 
+PKG_NAME:=luci-app-jd-dailybonus
+PKG_VERSION:=1.0.6
+PKG_RELEASE:=20211016
+
 LUCI_TITLE:=Luci for JD dailybonus Script
-LUCI_DEPENDS:=+libuci-lua +lua +node +node-request +uclient-fetch
+LUCI_DEPENDS:=+libuci-lua +lua +node +node-request +uclient-fetch +wget
 LUCI_PKGARCH:=all
 
-PKG_NAME:=luci-app-jd-dailybonus
-PKG_VERSION:=1.0.5
-PKG_RELEASE:=20210316
+define Package/luci-app-jd-dailybonus/conffiles
+/etc/config/jd-dailybonus
+endef
 
 include ../../luci.mk
 
