--- a/themes/luci-theme-argon/Makefile
+++ b/themes/luci-theme-argon/Makefile
@@ -8,8 +8,8 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=Argon Theme
 LUCI_DEPENDS:=
-PKG_VERSION:=2.2.7
-PKG_RELEASE:=20210318
+PKG_VERSION:=2.2.9
+PKG_RELEASE:=20211016-1
 
 include ../../luci.mk
 
