--- a/applications/luci-app-aria2/Makefile
+++ b/applications/luci-app-aria2/Makefile
@@ -7,7 +7,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI Support for Aria2
-LUCI_DEPENDS:=+aria2+ +ariang
+LUCI_DEPENDS:=+aria2 +ariang
 LUCI_PKGARCH:=all
 
 PKG_MAINTAINER:=Xingwang Liao <kuoruan@gmail.com>
