--- a/applications/luci-app-uugamebooster/Makefile
+++ b/applications/luci-app-uugamebooster/Makefile
@@ -1,16 +1,11 @@
-# Copyright (C) 2021 Openwrt.org
-#
-# This is free software, licensed under the Apache License, Version 2.0 .
-#
-
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for UUgamebooster
 LUCI_DEPENDS:=+uugamebooster
 LUCI_PKGARCH:=all
+
 PKG_NAME:=luci-app-uugamebooster
-PKG_VERSION:=1.0
-PKG_RELEASE:=7
+PKG_RELEASE:=$(COMMITCOUNT)
 
 include ../../luci.mk
 
