--- a/applications/luci-app-softethervpn/Makefile
+++ b/applications/luci-app-softethervpn/Makefile
@@ -8,8 +8,7 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=LuCI support for SoftEtherVPN
 LUCI_DEPENDS:=+zlib +libpthread +librt +libreadline +libncurses +libiconv-full +kmod-tun +libopenssl +softethervpn5-bridge +softethervpn5-client +softethervpn5-server
 LUCI_PKGARCH:=all
-PKG_VERSION:=1.0
-PKG_RELEASE:=4
+PKG_RELEASE:=$(COMMITCOUNT)
 
 include ../../luci.mk
 
