--- a/applications/luci-app-qbittorrent/Makefile
+++ b/applications/luci-app-qbittorrent/Makefile
@@ -8,9 +8,13 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=qbittorrent-nox for LuCI
 LUCI_DEPENDS:=+qBittorrent-Enhanced-Edition
 LUCI_PKGARCH:=all
+
 PKG_NAME:=luci-app-qbittorrent
-PKG_VERSION=1.0
-PKG_RELEASE:=2
+PKG_RELEASE:=$(AUTORELEASE)
+
+define Package/luci-app-qbittorrent/conffiles
+/etc/qBittorrent/
+endef
 
 include ../../luci.mk
 
