--- a/applications/luci-app-turboacc/Makefile
+++ b/applications/luci-app-turboacc/Makefile
@@ -16,7 +16,7 @@ LUCI_DEPENDS:=+pdnsd-alt \
 	+PACKAGE_TURBOACC_INCLUDE_BBR_CCA:kmod-tcp-bbr \
 	+PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER:dnsforwarder \
 	+PACKAGE_TURBOACC_INCLUDE_DNSPROXY:dnsproxy \
-	+PACKAGE_TURBOACC_INCLUDE_OFFLOADING:kmod-ipt-offload \
+	+PACKAGE_TURBOACC_INCLUDE_OFFLOADING:kmod-nft-offload \
 	+PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE:kmod-fast-classifier
 LUCI_PKGARCH:=all
 
