--- a/applications/luci-app-baidupcs-web/Makefile
+++ b/applications/luci-app-baidupcs-web/Makefile
@@ -9,13 +9,15 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=luci-app-baidupcs-web
 LUCI_TITLE:=LuCI support for BaiduPCS-Go
 LUCI_DEPENDS:=+baidupcs-web +wget-ssl +openssl-util
 LUCI_PKGARCH:=all
+
+PKG_NAME:=luci-app-baidupcs-web
 PKG_VERSION:=1.0
 PKG_RELEASE:=5
-PKG_MAINTAINER:=<https://github.com/KFERMercer/luci-app-baidupcs-web>
+
+PKG_MAINTAINER:=KFERMercer <KFER.Mercer@gmail.com>
 
 include ../../luci.mk
 
