--- a/applications/luci-app-wrtbwmon/Makefile
+++ b/applications/luci-app-wrtbwmon/Makefile
@@ -6,7 +6,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for Wrtbwmon
-LUCI_DEPENDS:=+luci-app-nlbwmon
+LUCI_DEPENDS:=+luci-app-nlbwmon +luci-lib-ipkg
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.0
 PKG_RELEASE:=7
