eluci-app-turboacc: drop shortcut-fe support
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-turboacc/Makefile
+++ b/applications/luci-app-turboacc/Makefile
@@ -11,28 +11,22 @@ PKG_RELEASE:=$(COMMITCOUNT)
 PKG_LICENSE:=GPL-3.0-only
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
-LUCI_TITLE:=LuCI support for Flow Offload / Shortcut-FE
+LUCI_TITLE:=LuCI support for flow offloading
 LUCI_DEPENDS:=+pdnsd-alt \
 	+PACKAGE_TURBOACC_INCLUDE_BBR_CCA:kmod-tcp-bbr \
 	+PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER:dnsforwarder \
 	+PACKAGE_TURBOACC_INCLUDE_DNSPROXY:dnsproxy \
-	+PACKAGE_TURBOACC_INCLUDE_OFFLOADING:kmod-nft-offload \
-	+PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE:kmod-fast-classifier
+	+PACKAGE_TURBOACC_INCLUDE_OFFLOADING:kmod-nft-offload
 LUCI_PKGARCH:=all
 
 define Package/luci-app-turboacc/config
 config PACKAGE_TURBOACC_INCLUDE_OFFLOADING
 	bool "Include Flow Offload"
-	depends on PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
 	default y
-
-config PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE
-	bool "Include Shortcut-FE"
-	default n
 
 config PACKAGE_TURBOACC_INCLUDE_BBR_CCA
 	bool "Include BBR CCA"
-	default y
+	default n
 
 config PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER
 	bool "Include DNSForwarder"
@@ -47,8 +41,7 @@ PKG_CONFIG_DEPENDS:= \
 	CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA \
 	CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER \
 	CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY \
-	CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING \
-	CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE
+	CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING
 
 include ../../luci.mk
 
