luci-app-minieap: code alignment

--- a/applications/luci-app-minieap/Makefile
+++ b/applications/luci-app-minieap/Makefile
@@ -5,7 +5,7 @@ PKG_VERSION=1.0
 PKG_RELEASE:=1
 
 LUCI_TITLE:=minieap 802.1X Client for LuCI
-LUCI_DESCRIPTION:=This package contains LuCI configuration pages for 8021xclient.
+LUCI_PKGARCH:=all
 LUCI_DEPENDS:=+minieap
 
 include ../../luci.mk
