--- a/applications/luci-app-ramfree/Makefile
+++ b/applications/luci-app-ramfree/Makefile
@@ -5,13 +5,14 @@
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=luci-app-ramfree
+LUCI_TITLE:=LuCI support for ramfree
+LUCI_DEPENDS:=
 LUCI_PKGARCH:=all
+
+PKG_NAME:=luci-app-ramfree
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
 
 include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
-
-
