luci-app-ssr-plus: sync with upstream source
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit e36b9bd541a66c56fad9f2393cbbfa5b582f21f7)

--- a/applications/luci-app-ssr-plus/Makefile
+++ b/applications/luci-app-ssr-plus/Makefile
@@ -57,7 +57,7 @@ LUCI_DEPENDS:= \
 define Package/$(PKG_NAME)/config
 choice
 	prompt "V2ray-core Selection"
-	default PACKAGE_$(PKG_NAME)_INCLUDE_SagerNet_Core if aarch64||arm||i386||x86_64
+	default PACKAGE_$(PKG_NAME)_INCLUDE_Xray if aarch64||arm||i386||x86_64
 	default PACKAGE_$(PKG_NAME)_INCLUDE_NONE_V2RAY
 
 	config PACKAGE_$(PKG_NAME)_INCLUDE_NONE_V2RAY
