luci-app-n2n_v3: pull updates from Lean

--- a/applications/luci-app-n2n_v3/Makefile
+++ b/applications/luci-app-n2n_v3/Makefile
@@ -6,11 +6,12 @@
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=n2n_v2 VPN Configuration module
+LUCI_TITLE:=n2n_v3 VPN Configuration module
 LUCI_DEPENDS:=+n2n-edge +n2n-supernode
 LUCI_PKGARCH:=all
-PKG_VERSION:=2.8.1
-PKG_RELEASE:=3
+PKG_NAME:=luci-app-n2n_v3
+PKG_VERSION:=3.0.0
+PKG_RELEASE:=1
 
 include ../../luci.mk
 
