--- a/applications/luci-app-n2n/Makefile
+++ b/applications/luci-app-n2n/Makefile
@@ -6,10 +6,11 @@
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=n2n_v3 VPN Configuration module
-LUCI_DEPENDS:=+n2n-edge +n2n-supernode
+LUCI_TITLE:=n2n VPN Configuration module
+LUCI_DEPENDS:=+n2n
 LUCI_PKGARCH:=all
-PKG_NAME:=luci-app-n2n_v3
+
+PKG_NAME:=luci-app-n2n
 PKG_VERSION:=3.0.0
 PKG_RELEASE:=1
 
