luci-app-ssr-plus: fix Xray gPRC multi support
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit e37c05ac2a84ae5a5581f113cedc38e217af779a)

--- a/applications/luci-app-ssr-plus/Makefile
+++ b/applications/luci-app-ssr-plus/Makefile
@@ -64,13 +64,13 @@ choice
 	bool "None"
 
 	config PACKAGE_$(PKG_NAME)_INCLUDE_V2ray
-	bool "Include V2ray-core"
+	bool "V2ray-core"
 
 	config PACKAGE_$(PKG_NAME)_INCLUDE_Xray
-	bool "Include Xray-core"
+	bool "Xray-core"
 
 	config PACKAGE_$(PKG_NAME)_INCLUDE_SagerNet_Core
-	bool "Include SagerNet-core (An enhanced edition of v2ray-core)"
+	bool "SagerNet-core (An enhanced edition of v2ray-core)"
 endchoice
 
 config PACKAGE_$(PKG_NAME)_INCLUDE_Kcptun
