--- a/applications/luci-app-zerotier/root/usr/share/rpcd/acl.d/luci-app-zerotier.json
+++ b/applications/luci-app-zerotier/root/usr/share/rpcd/acl.d/luci-app-zerotier.json
@@ -1,7 +1,13 @@
 {
 	"luci-app-zerotier": {
-		"description": "Grant UCI access for luci-app-zerotier",
+		"description": "Grant access to ZeroTier configuration",
 		"read": {
+			"file": {
+				"/sbin/ifconfig": [ "exec" ]
+			},
+			"ubus": {
+				"service": [ "list" ]
+			},
 			"uci": [ "zerotier" ]
 		},
 		"write": {
