luci-app-unblockneteasemusic: rewritten in JavaScript
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -10,10 +10,14 @@ LUCI_DEPENDS:=+busybox +dnsmasq-full +ipset +jsonfilter +node +uclient-fetch +uc
 LUCI_PKGARCH:=all
 
 PKG_NAME:=luci-app-unblockneteasemusic
-PKG_VERSION:=2.13
+PKG_VERSION:=3.0
 PKG_RELEASE:=1
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
+
+define Package/luci-app-unblockneteasemusic/conffiles
+/etc/config/unblockneteasemusic
+endef
 
 include ../../luci.mk
 
