--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -15,6 +15,10 @@ PKG_RELEASE:=1
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
+define Package/luci-app-unblockneteasemusic/conffiles
+/etc/config/unblockneteasemusic
+endef
+
 include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
