--- a/applications/luci-app-rclone/Makefile
+++ b/applications/luci-app-rclone/Makefile
@@ -5,8 +5,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-rclone
-PKG_VERSION:=1.4.1
-PKG_RELEASE:=2
+PKG_VERSION:=1.4.1-3
+PKG_RELEASE:=
 
 LUCI_TITLE:=LuCI support for Rclone
 LUCI_DEPENDS:=+rclone-config \
