luci-app-cpufreq: code lint
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit 8c9e633cc82b53e46a599a3ae3f5055e7ff75c43)
(cherry picked from commit ba416689d1f17167ae7903126da5a1ed59f01722)

--- a/applications/luci-app-cpufreq/Makefile
+++ b/applications/luci-app-cpufreq/Makefile
@@ -6,9 +6,9 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI for CPU Freq Setting
 LUCI_DEPENDS:=@(arm||aarch64)
+LUCI_PKGARCH:=all
 
 PKG_NAME:=luci-app-cpufreq
-PKG_VERSION:=1
 PKG_RELEASE:=$(COMMITCOUNT)
 
 include ../../luci.mk
