--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -4,14 +4,14 @@
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=LuCI support for UnblockNeteaseMusic
+LUCI_TITLE:=LuCI support for UnblockNeteaseMusic (JavaScript)
 LUCI_DEPENDS:=+busybox +dnsmasq-full +ipset +jsonfilter +node +uclient-fetch +ucode \
 	@(PACKAGE_libustream-mbedtls||PACKAGE_libustream-openssl||PACKAGE_libustream-wolfssl)
 LUCI_PKGARCH:=all
 
 PKG_NAME:=luci-app-unblockneteasemusic
-PKG_VERSION:=3.0
-PKG_RELEASE:=3
+PKG_VERSION:=3.1
+PKG_RELEASE:=1
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
