luci-app-ipsec-vpnd/luci-app-zerotier: order menu
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-ipsec-vpnd/root/usr/share/luci/menu.d/luci-app-ipsec-vpnd.json
+++ b/applications/luci-app-ipsec-vpnd/root/usr/share/luci/menu.d/luci-app-ipsec-vpnd.json
@@ -1,6 +1,7 @@
 {
 	"admin/vpn/ipsec-server": {
 		"title": "IPSec VPN Server",
+		"order": 30,
 		"action": {
 			"type": "view",
 			"path": "ipsec-vpnd/ipsec-vpnd"
