--- a/applications/luci-app-v2raya/root/usr/share/rpcd/acl.d/luci-app-v2raya.json
+++ b/applications/luci-app-v2raya/root/usr/share/rpcd/acl.d/luci-app-v2raya.json
@@ -3,6 +3,7 @@
 		"description": "Grant access to v2rayA configuration",
 		"read": {
 			"file": {
+				"/bin/mkdir -p /etc/v2raya/": [ "exec" ],
 				"/var/log/v2raya/v2raya.log": [ "read" ]
 			},
 			"ubus": {
@@ -11,6 +12,10 @@
 			"uci": [ "v2raya" ]
 		},
 		"write": {
+			"file": {
+				"/etc/v2raya/grpc_certificate.crt": [ "write" ],
+				"/etc/v2raya/grpc_private.key": [ "write" ]
+			},
 			"uci": [ "v2raya" ]
 		}
 	}
