--- a/applications/luci-app-turboacc/root/usr/share/rpcd/acl.d/luci-app-turboacc.json
+++ b/applications/luci-app-turboacc/root/usr/share/rpcd/acl.d/luci-app-turboacc.json
@@ -2,6 +2,9 @@
 	"luci-app-turboacc": {
 		"description": "Grant UCI access for luci-app-turboacc",
 		"read": {
+			"ubus": {
+				"luci.turboacc": [ "getSystemFeatures", "getFastPathStat", "getFullConeStat", "getTCPCCAStat" ]
+			},
 			"uci": [ "turboacc" ]
 		},
 		"write": {
