--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -1,11 +1,11 @@
 # SPDX-License-Identifier: GPL-3.0-only
 #
-# Copyright (C) 2019-2021 Tianling Shen <cnsztl@immortalwrt.org>
+# Copyright (C) 2019-2023 Tianling Shen <cnsztl@immortalwrt.org>
 
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for UnblockNeteaseMusic (JavaScript)
-LUCI_DEPENDS:=+busybox +dnsmasq-full +ipset +jsonfilter +node +uclient-fetch \
+LUCI_DEPENDS:=+dnsmasq-full +ipset +node \
 	@(PACKAGE_libustream-mbedtls||PACKAGE_libustream-openssl||PACKAGE_libustream-wolfssl)
 LUCI_PKGARCH:=all
 
