luci-app-passwall: fix dependencies
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-passwall/Makefile
+++ b/applications/luci-app-passwall/Makefile
@@ -35,8 +35,8 @@ LUCI_PKGARCH:=all
 LUCI_DEPENDS:=+coreutils +coreutils-base64 +coreutils-nohup +curl \
 	+dns2socks +dns2tcp +ip-full +libuci-lua +lua +luci-compat +luci-lib-jsonc \
 	+microsocks +resolveip +tcping +unzip \
-	+ipset +ipt2socks +iptables-mod-conntrack-extra +iptables-mod-iprange \
-	+iptables-mod-socket +iptables-mod-tproxy +kmod-ipt-nat \
+	+ipset +ipt2socks +kmod-ipt-nat \
+	+iptables-mod-conntrack-extra +iptables-mod-iprange +iptables-mod-tproxy \
 	+PACKAGE_$(PKG_NAME)_INCLUDE_Brook:brook \
 	+PACKAGE_$(PKG_NAME)_INCLUDE_ChinaDNS_NG:chinadns-ng \
 	+PACKAGE_$(PKG_NAME)_INCLUDE_Haproxy:haproxy \
