luci-app-unblockneteasemusic: bump to 3.1-5
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-unblockneteasemusic/Makefile
+++ b/applications/luci-app-unblockneteasemusic/Makefile
@@ -11,12 +11,16 @@ LUCI_PKGARCH:=all
 
 PKG_NAME:=luci-app-unblockneteasemusic
 PKG_VERSION:=3.1
-PKG_RELEASE:=4
+PKG_RELEASE:=5
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
 define Package/luci-app-unblockneteasemusic/conffiles
 /etc/config/unblockneteasemusic
+/usr/share/unblockneteasemusic/core/
+/usr/share/unblockneteasemusic/core_local_ver
+/usr/share/unblockneteasemusic/server.crt
+/usr/share/unblockneteasemusic/server.key
 endef
 
 include ../../luci.mk
